# rules_go

./: .bazelrc  MODULE.bazel  README.rst  WORKSPACE  go.mod  go.sum
.bazelci/: presubmit.yml
docs/go/core/: bzlmod.md
extras/: gomock.bzl
go/private/: context.bzl  extensions.bzl  repositories.bzl  sdk.bzl
go/private/actions/: archive.bzl  compilepkg.bzl
go/private/rules/: binary.bzl  test.bzl
go/tools/bazel_testing/: BUILD.bazel  bazel_testing.go  def.bzl
go/tools/builders/: cgo2.go  filter.go  generate_test_main.go  nogo_main.go  protoc.go
go/tools/bzltestutil/: xml.go
go/tools/bzltestutil/testdata/: timeout.xml
go/tools/gopackagesdriver/: aspect.bzl  flatpackage.go  gopackagesdriver_test.go  json_packages_driver.go  main.go  packageregistry.go
tests/bcr/: MODULE.bazel
tests/core/cross/: proto_test.go  sdk_version_test.go
tests/core/transition/: hermeticity_test.go
